myproject/deploy/yamls/spring-music-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    move2kube.konveyor.io/service.expose: "true"
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: spring-music
  name: spring-music
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      move2kube.konveyor.io/service: spring-music
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        move2kube.konveyor.io/service.expose: "true"
      creationTimestamp: null
      labels:
        move2kube.konveyor.io/service: spring-music
      name: spring-music
    spec:
      containers:
        - env:
            - name: JBP_CONFIG_SPRING_AUTO_RECONFIGURATION
              value: '{enabled: false}'
            - name: SPRING_PROFILES_ACTIVE
              value: http2
            - name: PORT
              value: "8080"
          image: index.docker.io/myproject/spring-music:latest
          imagePullPolicy: Always
          name: spring-music
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
