myproject/deploy/yamls/student-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    move2kube.konveyor.io/service.expose: "true"
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: student
  name: student
spec:
  ports:
    - name: port-8080
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    move2kube.konveyor.io/service: student
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
